added submodule client and apigateway

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "Retro-Routes-User-service"]
 	path = Retro-Routes-User-service
 	url = https://github.com/iamsribin/Retro-Routes-User-service.git
+[submodule "Retro-Routes-Apigateway-service"]
+	path = Retro-Routes-Apigateway-service
+	url = https://github.com/iamsribin/Retro-Routes-Apigateway-service
+[submodule "Retro-Routes-Client-Service"]
+	path = Retro-Routes-Client-Service
+	url = https://github.com/iamsribin/Retro-Routes-Client-Service
