--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,11 @@
 [submodule "Retro-Routes-User-service"]
 	path = Retro-Routes-User-service
 	url = https://github.com/iamsribin/Retro-Routes-User-service.git
+
 [submodule "Retro-Routes-Apigateway-service"]
 	path = Retro-Routes-Apigateway-service
 	url = https://github.com/iamsribin/Retro-Routes-Apigateway-service
+	
 [submodule "Retro-Routes-Client-Service"]
 	path = Retro-Routes-Client-Service
 	url = https://github.com/iamsribin/Retro-Routes-Client-Service
@@ -11,3 +13,7 @@
 [submodule "Retro-Routes-Driver-service"]
 	path = Retro-Routes-Driver-service
 	url = https://github.com/iamsribin/Retro-Routes-Driver-service
+
+[submodule "Retro-Routes-Auth-Service"]
+	path = Retro-Routes-Auth-Service
+	url = https://github.com/iamsribin/Retro-Routes-Auth-Service 
